--- a/client/src/index.css
+++ b/client/src/index.css
@@ -65,3 +65,13 @@
 .transition-transform {
   transition: transform 0.3s ease;
 }
+
+@keyframes small-bounce {
+  0%,
+  100% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-5px); /* Smaller bounce */
+  }
+}
