--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,10 +1,14 @@
 /* src/index.css */
-
+@import url("https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 @import "~slick-carousel/slick/slick.css";
 @import "~slick-carousel/slick/slick-theme.css";
+
+* {
+  font-family: "Montserrat", sans-serif;
+}
 
 .logo-container {
   display: flex;
